update new styling methods

--- a/less/_reset.less
+++ b/less/_reset.less
@@ -21,13 +21,15 @@ time, mark, audio, video {
     text-decoration:none;
     .box-sizing;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
+footer, header, hgroup, menu, nav, section,
+/* base element reset */
+label, input[type=text], textarea
+{ display: block; }
+
 body {line-height: 1;}
-ol, ul {list-style: none;}
 blockquote, q {quotes: none;}
 blockquote:before, blockquote:after,
 q:before, q:after {
