--- a/less/style.less
+++ b/less/style.less
@@ -2,28 +2,43 @@
 @import "_var";
 @import "_utility";
 @import "_mixin";
-@import "_font";
 @import "_layout";
-@import "_grid";
-@import "_formtable";
 
+@import "_base_font";
+@import "_base_grid";
+@import "_base_form";
 @import "_base_table";
+@import "_base_list";
+
 @import "_base_button";
 @import "_nav";
 @import "_modules";
 
 //plugins
-@import "_plugin_font_hgroup";
-@import "_plugin_button_pulse";
-@import "_plugin_button_sexy";
-@import "_plugin_button_hex";
-@import "_plugin_form_sexy";
-@import "_plugin_form_quill"; // <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
-@import "_plugin_effect_sexyshadow";
+@import "_plugin_button_drib";
+@import "_plugin_button_push";
+//@import "_plugin_font_hgroup";
+//@import "_plugin_button_pulse";
+//@import "_plugin_button_sexy";
+//@import "_plugin_button_hex";
+//@import "_plugin_form_sexy";
+//@import "_plugin_form_quill"; // <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
+//@import "_plugin_effect_sexyshadow";
 //@import "_plugin_utility_linkicon"; // the icon is not yet set
+//@import "_plugin_counter";
 
 //media screens, only if required
 @import "_media";
+
+
+//
+//
+//    Replace the old to new mixings!!!
+//      #shadow > .shadow, .inset, .text
+//
+//
+
+
 
 /* basic setup
 ========================= */
