--- a/less/_mixin.less
+++ b/less/_mixin.less
@@ -1,32 +1,32 @@
 // /*
-//  * #border      > .border-radius    ( radius                                                                              );
-//  *              > .multi-radius     ( topleft, topright, bottom right, bottom left                                        );
+//  * #border      > .radius       ( radius                                                                              );
+//  *              > .multi-radius ( topleft, topright, bottom right, bottom left                                        );
 //  *
-//  * #shadow      > .box-shadow       ( horz:0px, vert:1px, blur:2px, color:#ccc                                            );
-//  *              > .inset-box-shadow ( horz:0px, vert:1px, blur:2px,offset:0, color:#ccc                                   );
-//  *              > .test-shadow      ( color:#ccc, @arg: 0px 0px 20px                                                      );
+//  * #shadow      > .shadow       ( horz:0px, vert:1px, blur:2px, color:#ccc                                            );
+//  *              > .inset        ( horz:0px, vert:1px, blur:2px,offset:0, color:#ccc                                   );
+//  *              > .test         ( color:#ccc, @arg: 0px 0px 20px                                                      );
 //  *
-//  * #gradient    > .v                ( colorstart:#efefef, colorend:595959                                                 );
-//  *              > .h                ( colorstart:#efefef, colorend:595959                                                 );
-//  *              > .v3               ( colorstart:, colormiddle, middleposition, colorend                                  );
-//  *              > .h3               ( colorstart:, colormiddle, middleposition, colorend                                  );
-//  *              > .v4               ( colorstart:, color2, pos2, color3, pos3, colorend                                   );
-//  *              > .h4               ( colorstart:, color2, pos2, color3, pos3, colorend                                   );
+//  * #gradient    > .v            ( colorstart:#efefef, colorend:595959                                                 );
+//  *              > .h            ( colorstart:#efefef, colorend:595959                                                 );
+//  *              > .v3           ( colorstart:, colormiddle, middleposition, colorend                                  );
+//  *              > .h3           ( colorstart:, colormiddle, middleposition, colorend                                  );
+//  *              > .v4           ( colorstart:, color2, pos2, color3, pos3, colorend                                   );
+//  *              > .h4           ( colorstart:, color2, pos2, color3, pos3, colorend                                   );
 //  *
-//  * #animate     > .transition       ( property[width], duration[2s], timing[linear, ease, ease-in, ease-out, ], delay[2s] );
-//  *              > .transform        ( @val                                                                                );
-//  *              > .skew             ( angle x:35, angle y:0                                                               );
-//  *              > .scale            ( scale-x:1                                                                           );
-//  *              > .rotate           ( angle:35                                                                            );
-//  *              > .translate        ( move-x:10px, move-7:10px                                                            );
+//  * #animate     > .transition   ( property[width], duration[2s], timing[linear, ease, ease-in, ease-out, ], delay[2s] );
+//  *              > .transform    ( @val                                                                                );
+//  *              > .skew         ( angle x:35, angle y:0                                                               );
+//  *              > .scale        ( scale-x:1                                                                           );
+//  *              > .rotate       ( angle:35                                                                            );
+//  *              > .translate    ( move-x:10px, move-7:10px                                                            );
 //  *
-//  * #transparent > .background       ( color: @white; @alpha:1                                                             );
-//  *              > .border           ( color:@white, alpha:1                                                               );
-//  *              > .opacity          ( 100                                                                    ); this is in %
+//  * #transparent > .background   ( color: @white; @alpha:1                                                             );
+//  *              > .border       ( color:@white, alpha:1                                                               );
+//  *              > .opacity      ( 100                                                                    ); this is in %
 //  *
-//  *  .box-sizing ( @val:border-box );
-//  *  .size ( width:5px, height:5px );
-//  *  .content-columns ( count, gap );
+//  *  .box-sizing                 ( @val:border-box );
+//  *  .size                       ( width:5px, height:5px );
+//  *  .content-columns            ( count, gap );
 //  */
 
 
@@ -49,13 +49,30 @@
         -moz-border-radius-bottomright: @bottomRight;
         -moz-border-radius-bottomleft: @bottomLeft;
         border-top-left-radius: @topLeft;
+        border-top-right-radius: @topRight;
+        border-bottom-right-radius: @bottomRight;
+        border-bottom-left-radius: @bottomLeft;
+    }
+
+    //
+    // new
+    //
+    .radius(@radius:5px){
+        -webkit-border-radius: @radius;
+        -moz-border-radius: @radius;
+        border-radius: @radius;
+        -webkit-background-clip: padding-box;
+        -moz-background-clip: padding-box;
+        background-clip: padding-box;
     }
 }
 #shadow {
     .box-shadow(@horizontal: 0px, @vertical: 1px, @blur: 2px, @color: #CCC) {
+
         -webkit-box-shadow: @horizontal @vertical @blur @color;
-        -moz-box-shadow: @horizontal @vertical @blur @color;
-        box-shadow: @horizontal @vertical @blur @color;
+        -moz-box-shadow:    @horizontal @vertical @blur @color;
+        box-shadow:         @horizontal @vertical @blur @color;
+
     }
     .inset-box-shadow(@horizontal: 0px, @vertical: 1px, @blur: 2px, @offset:0, @color: #CCC) {
         -webkit-box-shadow: inset @horizontal @vertical @blur @offset @color;
@@ -64,6 +81,31 @@
     }
     .text-shadow (@arg:0px 0px 20px, @color: #ccc) {
         text-shadow: @color @arg;
+    }
+
+    //
+    // new mixing, replace above
+    //
+
+    // hor ver blur offset color
+    .shadow( @arg: 0px 1px 2px #ccc ) {
+
+        -webkit-box-shadow:@arg;
+        -moz-box-shadow:@arg;
+        box-shadow:@arg;
+
+    }
+
+    // hor vert blur offset color
+    .inset(@arg: 0px 1px 2px 0 #ccc) {
+        -webkit-box-shadow: inset @arg;
+        -moz-box-shadow: inset @arg;
+        box-shadow: inset inner @arg;
+    }
+
+    // hor, vert, blur, color
+    .text (@arg:0px 0px 20px #ccc) {
+        text-shadow: @arg;
     }
 }
 
