--- a/less/_base_button.less
+++ b/less/_base_button.less
@@ -33,215 +33,30 @@
         #shadow > .inset-box-shadow( 0,0,5px,2px, #aaa, 0 1px 0 0 #eee);
     }
 
-button.slick-black {
-    background-color: rgba(50, 50, 50, 0.9);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(50, 50, 50, 0.9) 0%), to(rgba(30, 30, 30, 0.9) 50%));
-    /* Saf4+, Chrome */
-    background-image: -webkit-linear-gradient(top, rgba(50, 50, 50, 0.9) 0%, rgba(30, 30, 30, 0.9) 50%, rgba(20, 20, 20, 0.9) 50%, rgba(0, 0, 0, 0.9) 100%);
-    background-image: -moz-linear-gradient(top, rgba(50, 50, 50, 0.9) 0%, rgba(30, 30, 30, 0.9) 50%, rgba(20, 20, 20, 0.9) 50%, rgba(0, 0, 0, 0.9) 100%);
-    background-image: -ms-linear-gradient(top, rgba(50, 50, 50, 0.9) 0%, rgba(30, 30, 30, 0.9) 50%, rgba(20, 20, 20, 0.9) 50%, rgba(0, 0, 0, 0.9) 100%);
-    background-image: -o-linear-gradient(top, rgba(50, 50, 50, 0.9) 0%, rgba(30, 30, 30, 0.9) 50%, rgba(20, 20, 20, 0.9) 50%, rgba(0, 0, 0, 0.9) 100%);
-    background-image: linear-gradient(top, rgba(50, 50, 50, 0.9) 0%, rgba(30, 30, 30, 0.9) 50%, rgba(20, 20, 20, 0.9) 50%, rgba(0, 0, 0, 0.9) 100%);
-    border: 0;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 1px 1px 1px 0px rgba(135, 135, 135, 0.1), inset -1px -1px 1px 0px rgba(135, 135, 135, 0.1);
-    -moz-box-shadow: inset 1px 1px 1px 0px rgba(135, 135, 135, 0.1), inset -1px -1px 1px 0px rgba(135, 135, 135, 0.1);
-    -ms-box-shadow: inset 1px 1px 1px 0px rgba(135, 135, 135, 0.1), inset -1px -1px 1px 0px rgba(135, 135, 135, 0.1);
-    -o-box-shadow: inset 1px 1px 1px 0px rgba(135, 135, 135, 0.1), inset -1px -1px 1px 0px rgba(135, 135, 135, 0.1);
-    box-shadow: inset 1px 1px 1px 0px rgba(135, 135, 135, 0.1), inset -1px -1px 1px 0px rgba(135, 135, 135, 0.1);
-    color: #fff;
-    font: lighter 22px "helvetica neue", helvetica, arial, sans-serif;
-    line-height: 1;
-    padding: 12px 0;
-    text-shadow: 0px -1px 1px rgba(0, 0, 0, 0.8), 0 1px 1px rgba(255, 255, 255, 0.3);
-    width: 150px; 
-}
-
-button.slick-black:hover {
-    background-color: rgba(70, 70, 70, 0.9);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(70, 70, 70, 0.9) 0%), to(rgba(50, 50, 50, 0.9) 50%));
-    /* Saf4+, Chrome */
-    background-image: -webkit-linear-gradient(top, rgba(70, 70, 70, 0.9) 0%, rgba(50, 50, 50, 0.9) 50%, rgba(40, 40, 40, 0.9) 50%, rgba(20, 20, 20, 0.9) 100%);
-    background-image: -moz-linear-gradient(top, rgba(70, 70, 70, 0.9) 0%, rgba(50, 50, 50, 0.9) 50%, rgba(40, 40, 40, 0.9) 50%, rgba(20, 20, 20, 0.9) 100%);
-    background-image: -ms-linear-gradient(top, rgba(70, 70, 70, 0.9) 0%, rgba(50, 50, 50, 0.9) 50%, rgba(40, 40, 40, 0.9) 50%, rgba(20, 20, 20, 0.9) 100%);
-    background-image: -o-linear-gradient(top, rgba(70, 70, 70, 0.9) 0%, rgba(50, 50, 50, 0.9) 50%, rgba(40, 40, 40, 0.9) 50%, rgba(20, 20, 20, 0.9) 100%);
-    background-image: linear-gradient(top, rgba(70, 70, 70, 0.9) 0%, rgba(50, 50, 50, 0.9) 50%, rgba(40, 40, 40, 0.9) 50%, rgba(20, 20, 20, 0.9) 100%);
-    cursor: pointer; 
-}
-
-button.slick-black:active {
-    background-color: rgba(30, 30, 30, 0.9);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(30, 30, 30, 0.9) 0%), to(rgba(20, 20, 20, 0.9) 50%));
-    /* Saf4+, Chrome */
-    background-image: -webkit-linear-gradient(top, rgba(30, 30, 30, 0.9) 0%, rgba(20, 20, 20, 0.9) 50%, rgba(10, 10, 10, 0.9) 50%, rgba(0, 0, 0, 0.9) 100%);
-    background-image: -moz-linear-gradient(top, rgba(30, 30, 30, 0.9) 0%, rgba(20, 20, 20, 0.9) 50%, rgba(10, 10, 10, 0.9) 50%, rgba(0, 0, 0, 0.9) 100%);
-    background-image: -ms-linear-gradient(top, rgba(30, 30, 30, 0.9) 0%, rgba(20, 20, 20, 0.9) 50%, rgba(10, 10, 10, 0.9) 50%, rgba(0, 0, 0, 0.9) 100%);
-    background-image: -o-linear-gradient(top, rgba(30, 30, 30, 0.9) 0%, rgba(20, 20, 20, 0.9) 50%, rgba(10, 10, 10, 0.9) 50%, rgba(0, 0, 0, 0.9) 100%);
-    background-image: linear-gradient(top, rgba(30, 30, 30, 0.9) 0%, rgba(20, 20, 20, 0.9) 50%, rgba(10, 10, 10, 0.9) 50%, rgba(0, 0, 0, 0.9) 100%); 
-}
-
-/* download itunes
-I wrote a blog post about creating this button:
-http://robots.thoughtbot.com/post/2718077289/make-css3-buttons-like-a-boss
- *******************************************************************************/
-    button.download-itunes {
-        background-color: #52a8e8;
-        background-image: -webkit-gradient(linear, left top, left bottom, from(#52a8e8), to(#377ad0));
-        /* Saf4+, Chrome */
-        background-image: -webkit-linear-gradient(top, #52a8e8, #377ad0);
-        background-image: -moz-linear-gradient(top, #52a8e8, #377ad0);
-        background-image: -ms-linear-gradient(top, #52a8e8, #377ad0);
-        background-image: -o-linear-gradient(top, #52a8e8, #377ad0);
-        background-image: linear-gradient(top, #52a8e8, #377ad0);
-        border-top: 1px solid #4081af;
-        border-right: 1px solid #2e69a3;
-        border-bottom: 1px solid #20559a;
-        border-left: 1px solid #2e69a3;
-        -webkit-border-radius: 16px;
-        -moz-border-radius: 16px;
-        -ms-border-radius: 16px;
-        -o-border-radius: 16px;
-        border-radius: 16px;
-        -webkit-box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
-        -moz-box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
-        -ms-box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
-        -o-box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
-        box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
-        color: #fff;
-        font: normal 11px "lucida grande", sans-serif;
-        line-height: 1;
-        padding: 3px 5px;
-        text-align: center;
-        text-shadow: 0 -1px 1px #3275bc;
-        width: 112px;
-        -webkit-background-clip: padding-box; 
-}
-
-button.download-itunes:hover {
-    background-color: #3e9ee5;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#3e9ee5 0%), to(#206bcb 100%));
-    /* Saf4+, Chrome */
-    background-image: -webkit-linear-gradient(top, #3e9ee5 0%, #206bcb 100%);
-    background-image: -moz-linear-gradient(top, #3e9ee5 0%, #206bcb 100%);
-    background-image: -ms-linear-gradient(top, #3e9ee5 0%, #206bcb 100%);
-    background-image: -o-linear-gradient(top, #3e9ee5 0%, #206bcb 100%);
-    background-image: linear-gradient(top, #3e9ee5 0%, #206bcb 100%);
-    border-top: 1px solid #2a73a6;
-    border-right: 1px solid #165899;
-    border-bottom: 1px solid #07428f;
-    border-left: 1px solid #165899;
-    -webkit-box-shadow: inset 0 1px 0 0 #62b1e9;
-    -moz-box-shadow: inset 0 1px 0 0 #62b1e9;
-    -ms-box-shadow: inset 0 1px 0 0 #62b1e9;
-    -o-box-shadow: inset 0 1px 0 0 #62b1e9;
-    box-shadow: inset 0 1px 0 0 #62b1e9;
-    cursor: pointer;
-    text-shadow: 0 -1px 1px #1d62ab;
-    -webkit-background-clip: padding-box; 
-}
-
-button.download-itunes:active {
-    background: #3282d3;
-    border: 1px solid #154c8c;
-    border-bottom: 1px solid #0e408e;
-    -webkit-box-shadow: inset 0 0 6px 3px #1657b5, 0 1px 0 0 white;
-    -moz-box-shadow: inset 0 0 6px 3px #1657b5, 0 1px 0 0 white;
-    -ms-box-shadow: inset 0 0 6px 3px #1657b5, 0 1px 0 0 white;
-    -o-box-shadow: inset 0 0 6px 3px #1657b5, 0 1px 0 0 white;
-    box-shadow: inset 0 0 6px 3px #1657b5, 0 1px 0 0 white;
-    text-shadow: 0 -1px 1px #2361a4;
-    -webkit-background-clip: padding-box; 
-}
-
-button[disabled].download-itunes,
-button[disabled].download-itunes:hover,
-button[disabled].download-itunes:active {
-    background-color: #dadada;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#dadada), to(#f3f3f3));
-    /* Saf4+, Chrome */
-    background-image: -webkit-linear-gradient(top, #dadada, #f3f3f3);
-    background-image: -moz-linear-gradient(top, #dadada, #f3f3f3);
-    background-image: -ms-linear-gradient(top, #dadada, #f3f3f3);
-    background-image: -o-linear-gradient(top, #dadada, #f3f3f3);
-    background-image: linear-gradient(top, #dadada, #f3f3f3);
-    border-top: 1px solid #c5c5c5;
-    border-right: 1px solid #cecece;
-    border-bottom: 1px solid #d9d9d9;
-    border-left: 1px solid #cecece;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    -ms-box-shadow: none;
-    -o-box-shadow: none;
-    box-shadow: none;
-    color: #8f8f8f;
-    cursor: not-allowed;
-    text-shadow: 0 -1px 1px #ebebeb; 
-}
-
-button.download-itunes::-moz-focus-inner {
-    border: 0;
-    padding: 0; 
-}
-
-
-
 /* minimal indent (inspired by okcupid iphone interface)
  *******************************************************************************/
-    div.indent {
-        background-color: #e2e2e2;
-        background-image: -webkit-gradient(linear, left top, left bottom, from(#e2e2e2), to(#fafafa));
-        /* Saf4+, Chrome */
-        background-image: -webkit-linear-gradient(top, #e2e2e2, #fafafa);
-        background-image: -moz-linear-gradient(top, #e2e2e2, #fafafa);
-        background-image: -ms-linear-gradient(top, #e2e2e2, #fafafa);
-        background-image: -o-linear-gradient(top, #e2e2e2, #fafafa);
-        background-image: linear-gradient(top, #e2e2e2, #fafafa);
-        -webkit-border-radius: 8px;
-        -moz-border-radius: 8px;
-        -ms-border-radius: 8px;
-        -o-border-radius: 8px;
-        border-radius: 8px;
-        margin: 50px auto 0;
-        padding: 10px 0;
-        width: 170px; 
-}
-
 button.minimal-indent {
-    background-color: #f3f3f3;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3 0%), to(#dddddd 50%));
-    /* Saf4+, Chrome */
-    background-image: -webkit-linear-gradient(top, #f3f3f3 0%, #dddddd 50%, #d2d2d2 50%, #dfdfdf 100%);
-    background-image: -moz-linear-gradient(top, #f3f3f3 0%, #dddddd 50%, #d2d2d2 50%, #dfdfdf 100%);
-    background-image: -ms-linear-gradient(top, #f3f3f3 0%, #dddddd 50%, #d2d2d2 50%, #dfdfdf 100%);
-    background-image: -o-linear-gradient(top, #f3f3f3 0%, #dddddd 50%, #d2d2d2 50%, #dfdfdf 100%);
-    background-image: linear-gradient(top, #f3f3f3 0%, #dddddd 50%, #d2d2d2 50%, #dfdfdf 100%);
-    border-right: 1px solid #dfdfdf;
-    border-bottom: 1px solid #b4b4b4;
-    border-right: 1px solid #dfdfdf;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    border-radius: 5px;
-    -webkit-box-shadow: inset 0 1px 0 0 white, 0 1px 0 0 #d5d5d5, 0 -1px 2px 1px #efefef;
-    -moz-box-shadow: inset 0 1px 0 0 white, 0 1px 0 0 #d5d5d5, 0 -1px 2px 1px #efefef;
-    -ms-box-shadow: inset 0 1px 0 0 white, 0 1px 0 0 #d5d5d5, 0 -1px 2px 1px #efefef;
-    -o-box-shadow: inset 0 1px 0 0 white, 0 1px 0 0 #d5d5d5, 0 -1px 2px 1px #efefef;
-    box-shadow: inset 0 1px 0 0 white, 0 1px 0 0 #d5d5d5, 0 -1px 2px 1px #efefef;
-    color: #666;
-    font: bold 16px "helvetica neue", helvetica, arial, sans-serif;
-    margin: 0;
-    padding: 7px 0;
-    text-shadow: 0 1px 1px #fff;
-    width: 150px; 
+    border-right:   1px solid #dfdfdf;
+    border-bottom:  1px solid #b4b4b4;
+    border-right:   1px solid #dfdfdf;
+
+    margin:         0;
+    width:          150px;
+    padding:        7px 0;
+    background:     #f3f3f3;
+
+    color:          #666;
+    text-shadow:    0 1px 1px #fff;
+    font:           bold 16px "helvetica neue", helvetica, arial, sans-serif;
+
+    #border > .radius (5px);
+    #gradient > .v4(#f3f3f3, #ddd, 50, #d2d2d2, 50, #dfdfdf);
+    #shadow > .inset3( 0 1x 0 0 white, 0 1px 0 0 #d5d5d5, 0 -1px 2px 1px #efefef );
 }
 
 button.minimal-indent:hover {
-    background-color: #e5e5e5;
+    background: #e5e5e5;
+
     background-image: -webkit-gradient(linear, left top, left bottom, from(#e5e5e5 0%), to(#d1d1d1 50%));
     /* Saf4+, Chrome */
     background-image: -webkit-linear-gradient(top, #e5e5e5 0%, #d1d1d1 50%, #c4c4c4 50%, #b8b8b8 100%);
@@ -249,39 +64,26 @@ button.minimal-indent:hover {
     background-image: -ms-linear-gradient(top, #e5e5e5 0%, #d1d1d1 50%, #c4c4c4 50%, #b8b8b8 100%);
     background-image: -o-linear-gradient(top, #e5e5e5 0%, #d1d1d1 50%, #c4c4c4 50%, #b8b8b8 100%);
     background-image: linear-gradient(top, #e5e5e5 0%, #d1d1d1 50%, #c4c4c4 50%, #b8b8b8 100%);
-    -webkit-box-shadow: inset 0 1px 0 0 #f2f2f2, 0 1px 0 0 #c9c9c9, 0 -1px 2px 1px #e3e3e3;
-    -moz-box-shadow: inset 0 1px 0 0 #f2f2f2, 0 1px 0 0 #c9c9c9, 0 -1px 2px 1px #e3e3e3;
-    -ms-box-shadow: inset 0 1px 0 0 #f2f2f2, 0 1px 0 0 #c9c9c9, 0 -1px 2px 1px #e3e3e3;
-    -o-box-shadow: inset 0 1px 0 0 #f2f2f2, 0 1px 0 0 #c9c9c9, 0 -1px 2px 1px #e3e3e3;
-    box-shadow: inset 0 1px 0 0 #f2f2f2, 0 1px 0 0 #c9c9c9, 0 -1px 2px 1px #e3e3e3; 
+
+    #shadow > .inset3( 0 1px 0 0 #f2f2f2, 0 1px 0 0 #c9c9c9, 0 -1px 2px 1px #e3e3e3 );
 }
 
 button.minimal-indent:active {
-    -webkit-box-shadow: inset 0 0 30px 0 #999999, 0 1px 0 0 white;
-    -moz-box-shadow: inset 0 0 30px 0 #999999, 0 1px 0 0 white;
-    -ms-box-shadow: inset 0 0 30px 0 #999999, 0 1px 0 0 white;
-    -o-box-shadow: inset 0 0 30px 0 #999999, 0 1px 0 0 white;
-    box-shadow: inset 0 0 30px 0 #999999, 0 1px 0 0 white; 
+    #shadow > .inset2( 0 0 30px 0 #999999, 0 1px 0 0 white );
 }
 
 
 
-/* disabled button styles
-works with this markup: <button disabled="disabled">Submit</button>
- *******************************************************************************/
+/*  <button disabled="disabled" >Submit</button> */
     button[disabled],
     button[disabled]:hover,
     button[disabled]:active {
-        background: #999;
         border: 0;
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        -ms-box-shadow: none;
-        -o-box-shadow: none;
-        box-shadow: none;
         color: #aaa;
-        cursor: not-allowed;
+        background: #999;
         text-shadow: none; 
+        cursor: not-allowed;
+        #shadow > .shadow(none);
 }
 
 
