--- a/less/style.less
+++ b/less/style.less
@@ -17,6 +17,7 @@
 //plugins
 @import "_plugin_button_drib";
 @import "_plugin_button_push";
+@import "_plugin_button_slim";
 //@import "_plugin_font_hgroup";
 //@import "_plugin_button_pulse";
 //@import "_plugin_button_sexy";
