--- a/less/_mixin.less
+++ b/less/_mixin.less
@@ -103,6 +103,24 @@
         box-shadow: inset inner @arg;
     }
 
+    .inset2(@arg: 0px 1px 2px 0 #ccc, @arg2: 0px 1px 2px 0 #ccc) {
+        -webkit-box-shadow: inset @arg, @arg2 ;
+        -moz-box-shadow: inset @arg, @arg2;
+        box-shadow: inset inner @arg, @arg2;
+    }
+
+    .inset3(@arg: 0px 1px 2px 0 #ccc, @arg2: 0px 1px 2px 0 #ccc, @arg3:0px 1px 2px 0 #ccc) {
+        -webkit-box-shadow: inset @arg, @arg2,@arg3 ;
+        -moz-box-shadow: inset @arg, @arg2,@arg3;
+        box-shadow: inset inner @arg, @arg2,@arg3;
+    }
+
+    .inset4(@arg: 0px 1px 2px 0 #ccc, @arg2: 0px 1px 2px 0 #ccc, @arg3:0px 1px 2px 0 #ccc, @arg4:0px 1px 2px 0 #ccc) {
+        -webkit-box-shadow: inset @arg, @arg2, @arg3, @arg4 ;
+        -moz-box-shadow: inset @arg, @arg2, @arg3, @arg4;
+        box-shadow: inset inner @arg, @arg2, @arg3, @arg4;
+    }
+
     // hor, vert, blur, color
     .text (@arg:0px 0px 20px #ccc) {
         text-shadow: @arg;
