organised file structure

--- a/less/m/_mixin.less
+++ b/less/m/_mixin.less
@@ -315,7 +315,7 @@
 }
 
 //button related
-.pos ( @posStart:0 0, @posEnd: 10px 10px ){
+.back-pos ( @posStart:0 0, @posEnd: 10px 10px ){
     background-position: @posStart; 
     &:hover{ background-position: @posEnd; }
 }
