--- a/less/m/_plugin_button_hex.less
+++ b/less/m/_plugin_button_hex.less
@@ -16,6 +16,7 @@ button.hex {
     background-color: #ccc;
     border: 1px solid #ccc;
     font: 1em/2em Arial, Helvetica;
+    min-width:160px;
     #shadow   > .text-shadow();
     #border   > .border-radius( .3em );
     #gradient > .v3(#fff, #fff, 25%, #e6e6e6);
