--- a/less/m/_base_grid.less
+++ b/less/m/_base_grid.less
@@ -8,8 +8,8 @@
 // .g1 to .g12 for grids
 
 //grids variable doubled in style.less
-@grids: 12; //# of grids, up to 16
-@gut: 2.6%; //gutter width
+//@grids: 12; //# of grids, up to 16
+//@gut: 2.6%; //gutter width
 
 .row, .row .row { position:relative; width:100%; margin:5px auto; clear:both; display:block; }
 /* fix */
