--- a/less/style.less
+++ b/less/style.less
@@ -1,11 +1,11 @@
-// load all styles
+// Load all styles
 @import "_config";
 
-/* font type */
+// Font type
 @globalfont: 1em;
 @fontfamily: Palatino, 'Palatino Linotype', 'Book Antiqua', FreeSerif, Gerogia, serif;
 
-//grids variables
+// Grids variables
 @grids: 12; //# of grids, up to 16
 @gut: 1.6%; //gutter width
 
@@ -43,7 +43,6 @@ a {
 header {  }
 section{ margin-bottom:80px;}
 footer {  }
-
 
 
 /* element from mixings
